# SQLiteCpp_Example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: main.yml
src/: main.cpp
src/db/: README.md  chinook.db3  chinook.sql
